<resources>
    <string name="appName">Digi Dictionary</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="applyChanges">Apply</string>
    <string name="empty">Empty</string>
    <string name="search">Search</string>
    <string name="emptyTextError">Text can\'t be empty</string>
    <string name="start">Start</string>
    <string name="sort">Sort</string>
    <string name="dbError">Internal error</string>
    <string name="remoteDictProviderShort">Remote dict. provider</string>
    <string name="addRemoteDictProvider">Add a new remote dictionary provider</string>
    <string name="addRemoteDictProvider_label">Add remote dict. provider</string>
    <string name="addRemoteDictProvider_name">Name</string>
    <string name="addRemoteDictProvider_schema">Schema</string>
    <string name="addRemoteDictProvider_schemaDescription">A schema is a simple URL with query placeholder.\nExample: <i>https://dictionary.cambridge.org/dictionary/english/$query$</i>.\nHow to determine where to set $query$:\n• Search any word or expression in the dictionary site and find the word in the URL.\n• Replace the word to $query$.</string>
    <string name="addRemoteDictProvider_providerNameExists">A provider with such name already exists</string>
    <string name="addRemoteDictProvider_providerSchemaExists">A provider with such schema already exists</string>
    <string name="addRemoteDictProvider_providerSchemaInvalidUrl">Invalid URL</string>
    <string name="addRemoteDictProvider_providerNoQueryPlaceholder">Schema should contain $query$ placeholder. Read the info below</string>
    <string name="addRemoteDictProvider_rules">URL encoding rules</string>
    <string name="addRemoteDictProvider_spaceReplacement">Replace space to:</string>
    <string name="addRemoteDictProvider_spaceReplacementInlined" translatable="false">+-_</string>
    <string-array name="addRemoteDictProvider_spaceReplacementVariantsUser">
        <item>+ (Plus)</item>
        <item>- (Minus)</item>
        <item>_ (Underscore)</item>
    </string-array>
    <string name="chooseRemoteDictProvider_label">Choose remote dict. provider</string>
    <string name="chooseRemoteDictProvider_failedToLoadProvidersError">Failed to load actual remote dict. providers. Default providers are shown.</string>
    <string name="chooseRemoteDictProvider_failedToLaunchBrowser">Failed to launch the default browser.</string>
    <string name="manageRemoteDictProviders_label">Remote dict. providers</string>
    <string name="manageRemoteDictProviders_deleteError">Failed to delete the dictionary provider.</string>
    <string name="manageRemoteDictProviders_deleteMessage">Do you really want to delete the remote dictionary provider?</string>
    <string name="home_label">Home</string>
    <string name="home_searchNoResultsMessage">No results? Add a record then.</string>
    <string name="home_searchProperty_expression">@string/expression</string>
    <string name="home_searchProperty_meaning">@string/meaning</string>
    <string-array name="home_searchProperties">
        <item>@string/home_searchProperty_expression</item>
        <item>@string/home_searchProperty_meaning</item>
    </string-array>
    <string name="home_searchPropertyDialog_title">Search properties</string>
    <string name="home_searchPropertyPrefix">Search for</string>
    <string name="home_searchProperty_all">All</string>
    <string name="home_eventStartedFormat">Event \'%s\' started</string>
    <string name="home_eventEndedFormat">Event \'%s\' ended</string>
    <string name="remindRecords_labelInFragment">Remind</string>
    <string name="remindRecords_label">Remind me!</string>
    <string name="remindRecords_repeatContentDescription">Repeat</string>
    <string name="expression">Expression</string>
    <string name="meaning">Meaning</string>
    <string name="additionalNotes">Additional notes</string>
    <string name="score">Score</string>
    <string name="meaningParseError">An error happened:\n%s</string>
    <string name="meaningPrefix">Meaning: </string>
    <string name="meaningAndOrdinalFormat">Meaning %d</string>
    <string name="recordLoadingError">Failed to load record</string>
    <string name="recordCollectionLoadingError">There was an error during the loading of the records.</string>
    <string name="recordSortType_newest">Newest</string>
    <string name="recordSortType_oldest">Oldest</string>
    <string name="recordSortType_greatestScore">Greatest score</string>
    <string name="recordSortType_leastScore">Least score</string>
    <string name="recordSortType_byExpression">By expression (A-Z)</string>
    <string name="recordSortType_byExpressionInverse">By expression (Z-A)</string>
    <string-array name="recordSortTypes">
        <item>@string/recordSortType_newest</item>
        <item>@string/recordSortType_oldest</item>
        <item>@string/recordSortType_greatestScore</item>
        <item>@string/recordSortType_leastScore</item>
        <item>@string/recordSortType_byExpression</item>
        <item>@string/recordSortType_byExpressionInverse</item>
    </string-array>
    <string name="recordSortTypeDialog_title">Sorting</string>
    <string name="addEditRecord_addButtonText">@string/add</string>
    <string name="addEditRecord_editButtonText">Change</string>
    <string name="addEditRecord_label">Add or edit a record</string>
    <string name="addEditRecord_existingExprError">Such expression already exists</string>
    <string name="addEditRecord_meaningDuplicateError">There\'s already an item with such meaning</string>
    <string name="addEditRecord_exprNoLetterOrDigit">Expression should contain at least one letter or digit</string>
    <string name="addEditRecord_meaningNoLetterOrDigit">Meaning should contain at least one letter or digit</string>
    <string name="addEditRecord_outlineColor">Outline color</string>
    <string name="addEditRecord_doNotChangeCreationTime">Don\'t change creation time</string>
    <string name="addEditRecord_meaningIllegalCharactersError">Meaning contains illegal characters (Group separator)</string>
    <string name="badgeInteraction_badge">Badge</string>
    <string name="badgeSelector_manage">Manage badges</string>
    <string name="manageRecordBadges_title">Record badges</string>
    <string name="manageRecordBadges_addContentDescription">Add a new record badge</string>
    <string name="manageRecordBadges_removeWarning">Do you really want to remove the badge? This will remove the badge from all the records.</string>
    <string name="manageRecordBadges_removeError">Failed to remove the badge</string>
    <string name="addEditBadge_title">Add or edit badge</string>
    <string name="addEditBadge_name">Name</string>
    <string name="addEditBadge_nameExistsError">Badge with such name is already added</string>
    <string name="viewRecord_label">View</string>
    <string name="viewRecord_deleteMessage">Do you really want to delete this record?</string>
    <string name="quiz">Quiz</string>
    <string name="quiz_correctAnswer">Correct</string>
    <string name="quiz_wrongAnswer">Wrong</string>
    <string name="quiz_loadingError">There was an error during the loading of the elements</string>
    <string name="quiz_saveError">An error happened on saving the results.</string>
    <string name="quiz_saveResults">Save results</string>
    <string name="quizNav_last24Hours">Last 24 hours</string>
    <string name="quizNav_last48Hours">Last 48 hours</string>
    <string name="quizNav_all">All</string>
    <string name="stats">Statistics</string>
    <string name="stats_failedToComputeStats">Failed to compute the statistics</string>
    <string name="stats_charts">Charts</string>
    <string name="stats_additionStatsHeader">Addition</string>
    <string name="stats_recordsAdded_wholeTime">In whole time</string>
    <string name="stats_recordsAdded_last24Hours">In last 24 hours</string>
    <string name="stats_recordsAdded_last7Days">In last 7 days</string>
    <string name="stats_recordsAdded_last31Days">In last 31 days</string>
    <string name="stats_chart_last7DaysCaption">Last 7 days</string>
    <string name="stats_chart_last31DaysCaption">Last 31 days</string>
    <string name="stats_chart_lastDaysDataSetLabel">Records added</string>
    <string name="stats_chart_thisYearCaption">This year</string>
    <string name="stats_chart_minLabel">Minimum</string>
    <string name="stats_chart_maxLabel">Maximum</string>
    <string name="stats_chart_avgLabel">Average</string>
    <string name="settings">Settings</string>
    <string name="settings_export">Export</string>
    <string name="settings_import">Import</string>
    <string name="settings_deleteAllRecords">Delete all records</string>
    <string name="settings_deleteAllRecordsDialogMessage">Do you really want to delete all records?\n<b>This operation can\'t be undone.</b></string>
    <string name="settings_deleteAllSuccess">All records were deleted</string>
    <string name="settings_failedToLoadSettings">Failed to load the settings</string>
    <string name="settings_generalGroup">General</string>
    <string name="settings_backupTitle">Backup</string>
    <string name="settings_openBrowserInApp">Open browser in-app</string>
    <string name="settings_scorePointsPerCorrectAnswer">Score points per right answer</string>
    <string name="settings_scorePointsPerWrongAnswer">Score points per wrong answer</string>
    <string name="settings_remindMaxItems">Max items</string>
    <string name="settings_remindShowMeaning">Show meaning</string>
    <string name="settings_widgetListMaxSize">List size</string>
    <string name="settings_widgetTitle">Widget</string>
    <string name="settings_linkToManageRemoteDictProviders">Manage remote. dict providers</string>
    <string name="settings_linkToManageRecordBadges">Manage record badges</string>
    <string name="settings_miscGroup">Miscellaneous</string>
    <string name="settings_breakStrategy">Line break strategy</string>
    <string name="settings_hyphenation">Hyphenation</string>
    <string name="settings_breakStrategy_simple">Simple</string>
    <string name="settings_breakStrategy_balanced">Balanced</string>
    <string name="settings_breakStrategy_highQuality">High quality</string>
    <string name="settings_hyphenation_none">None</string>
    <string name="settings_hyphenation_normal">Normal</string>
    <string name="settings_hyphenation_full">Full</string>
    <string-array name="settings_breakStrategy_dialogChoices">
        <item>@string/settings_breakStrategy_simple</item>
        <item>@string/settings_breakStrategy_balanced</item>
        <item>@string/settings_breakStrategy_highQuality</item>
    </string-array>
    <string name="importExportConfig_selectFile">Select file</string>
    <string name="importConfig_importBadges">Import badges</string>
    <string name="importConfig_replaceBadges">Replace badges</string>
    <string name="importConfig_replaceBadges_description">In checked state, if a badge stored now and a badge in the exported file have a same name, its color is replaced in favor of exported file\'s one. When the switch is off, the color won\'t be changed.</string>
    <string name="eventInfo_startTime">Start time</string>
    <string name="eventInfo_endTime">End time</string>
    <string name="eventInfo_duration">Duration</string>
    <string name="eventInfo_totalRecordsAdded">Total records added</string>
    <string name="eventInfo_showRecords">Show records</string>
</resources>