<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/home_menu_more"
        android:icon="@drawable/ic_more"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/statsFragment"
                android:title="@string/stats"
                android:icon="@drawable/ic_stats" />

            <item
                android:id="@+id/quizNavigation"
                android:title="@string/quiz" />

            <item
                android:id="@+id/settingsFragment"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/manageRemoteDictionaryProvidersFragment"
                android:title="@string/labelManageRemoteDictProvidersFragment"/>
        </menu>
    </item>
</menu>