<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addBadgeDialog_nameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/addEditBadge_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addBadgeDialog_nameInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <io.github.pelmenstar1.digiDict.common.ui.ColorPaletteView
                android:id="@+id/addBadgeDialog_colorPalette"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                app:colors="@array/add_edit_badge_dialog_outline_colors"
                app:strokeColor="@color/add_edit_badge_dialog_color_palette_stroke_color"
                app:title="@string/addEditRecord_outlineColor" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/addBadgeDialog_addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        tools:text="@string/add" />
</FrameLayout>